--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-reveal": "^0.7.0",
 		"tailwindcss": "^3.3.3",
-		"tailwindcss-intersect": "^1.0.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
