--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"non.geist": "^1.0.1"
+		"clsx": "^2.1.0",
+		"non.geist": "^1.0.1",
+		"tailwind-merge": "^2.2.0"
 	}
 }
