--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@motionone/svelte": "^10.16.4",
 		"clsx": "^2.1.0",
 		"non.geist": "^1.0.1",
 		"tailwind-merge": "^2.2.0"
