feat: initialize shadcn and add button

--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
 	"type": "module",
 	"dependencies": {
 		"@motionone/svelte": "^10.16.4",
+		"bits-ui": "^0.14.0",
 		"clsx": "^2.1.0",
+		"lucide-svelte": "^0.312.0",
 		"non.geist": "^1.0.1",
-		"tailwind-merge": "^2.2.0"
+		"tailwind-merge": "^2.2.0",
+		"tailwind-variants": "^0.1.20"
 	}
 }
