--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"@tailwindcss/typography": "^0.5.10",
+		"@tailwindcss/vite": "4.0.0-alpha.6",
+		"tailwindcss": "4.0.0-alpha.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/typography": "^0.5.10",
-		"@tailwindcss/vite": "4.0.0-alpha.6",
 		"clsx": "^2.1.0",
-		"tailwind-merge": "^2.2.1",
-		"tailwindcss": "4.0.0-alpha.6"
+		"non.geist": "^1.0.2",
+		"tailwind-merge": "^2.2.1"
 	}
 }
